Update and rename style_qgismaps.css to style_mapssites.css

--- a/style/style_mapssites.css
+++ b/style/style_mapssites.css
@@ -50,6 +50,7 @@ section img:hover{
   display: flex;
   flex-direction: column;
   gap: 40px;
+  width: 30%;
 }
 
 .version{
@@ -95,4 +96,5 @@ code{
   height: 100%;
   left: 0;
   top: 0;
+
 }
